--- a/tcf_website/templates/course/course_professor.html
+++ b/tcf_website/templates/course/course_professor.html
@@ -12,12 +12,12 @@
 
     {% include "common/toolbar.html" with breadcrumbs=breadcrumbs %}
 
-    <div class="d-flex flex-column align-items-center my-3 mt-md-5">
-        <h1>{{ instructor.full_name }}</h1>
+    <div class="d-flex flex-column my-3 mt-md-5">
         <div class="d-md-flex">
-            <h4 class="mr-md-3">{{ course.code }}</h4>
-            <h4 class="mr-md-3">{{ course.title }}</h4>
+            <h2 class="mr-md-3" style="white-space: nowrap">{{ course.code }} |</h2>
+            <h2 class="mr-md-3">{{ course.title }}</h2>
         </div>
+        <h4><a href="{% url 'instructor' instructor_id=instructor.id %}">{{ instructor.full_name }}</a></h4>
     </div>
 
     <div class="ratings row d-flex mb-3 justify-content-center">
