--- a/tcf_website/templates/landing/landing.html
+++ b/tcf_website/templates/landing/landing.html
@@ -235,7 +235,7 @@
                 and running for years to come. <br><br>
                 We're still in the process of beta testing, so thank you for
                 your patience as we work out any bugs and errors. Help us out,
-                and report any bugs that your find! <br><br>
+                and report any bugs that you find! <br><br>
                 Questions, comments, or concerns? <br>
                 Fill out the feedback form below and/or join our
                 <a href="https://discord.gg/tAjzH7eyvW" class="text-tcf-blue">discord server</a>!</p>
