Linked review form with model instance creation

--- a/tcf_website/templates/reviews/new.html
+++ b/tcf_website/templates/reviews/new.html
@@ -19,12 +19,12 @@
           <h4 class="review-form-header form-group col-12 my-4">
             Which class are you reviewing?</h4>
           <div class="form-group col-sm-3 col-6">
-            <label for="course">Subject</label>
-            <input type="text" placeholder="e.g. CS" class="form-control" id="course" name="subject" required>
+            <label for="subject">Subject</label>
+            <input type="text" placeholder="e.g. CS" class="form-control" id="subject" name="subject" required>
           </div>
           <div class="form-group col-sm-3 col-6">
-            <label for="course">Course ID</label>
-            <input type="text" placeholder="e.g. 2150" class="form-control" id="course" name="course" required>
+            <label for="courseID">Course ID</label>
+            <input type="text" placeholder="e.g. 2150" class="form-control" id="courseID" name="courseID" required>
           </div>
           <div class="form-group col-sm-6">
             <label for="instructor">Instructor</label>
@@ -122,32 +122,32 @@
               <h4 class="review-form-header p-0 mt-4">
                 Hours of work/week</h4>
               <div class="row py-3">
-                <label for="hours" class="review-form-label col-8">
+                <label for="hoursReading" class="review-form-label col-8">
                   <i class="fas fa-book"></i> Reading
                 </label>
                 <input type="number" value=0 min="0" max="20" class="form-control col"
-                       id="hours_reading" name="hours_reading" required>
+                       id="hoursReading" name="hoursReading" required>
               </div>
               <div class="row py-3">
-                <label for="hours" class="review-form-label col-8">
+                <label for="hoursWriting" class="review-form-label col-8">
                   <i class="fas fa-pencil-alt"></i> Writing
                 </label>
                 <input type="number" value=0 min="0" max="20" class="form-control col"
-                       id="hours_writing" name="hours_writing" required>
+                       id="hoursWriting" name="hoursWriting" required>
               </div>
               <div class="row py-3">
-                <label for="hours" class="review-form-label col-8">
+                <label for="hoursGroupwork" class="review-form-label col-8">
                   <i class="fas fa-user-friends"></i> Groupwork
                 </label>
                 <input type="number" value=0 min="0" max="20" class="form-control col"
-                       id="hours_groupwork" name="hours_groupwork" required>
+                       id="hoursGroupwork" name="hoursGroupwork" required>
               </div>
               <div class="row py-3">
-                <label for="hours" class="review-form-label col-8">
+                <label for="hoursOther" class="review-form-label col-8">
                   <i class="fas fa-flask"></i> Other
                 </label>
                 <input type="number" value=0 min="0" max="20" class="form-control col"
-                       id="hours_other" name="hours_other" required>
+                       id="hoursOther" name="hoursOther" required>
               </div>
           </div>
         </div>
