Adding majors to sign up and profile also pylint fixing

--- a/tcf_website/templates/profile/profile.html
+++ b/tcf_website/templates/profile/profile.html
@@ -28,6 +28,14 @@
                             {{ form.graduation_year.label_tag }}
                             {{ form.graduation_year }}
                         </div>
+                        <div class="col-12 col-lg-4 ">
+                            {{ form.first_major.label_tag }}
+                            {{ form.first_major }}
+                        </div>
+                        <div class="col-12 col-lg-4 ">
+                            {{ form.second_major.label_tag }}
+                            {{ form.second_major }}
+                        </div>
                     </div>
                     <input type="submit" class="btn btn-primary mt-3" value="Save Profile">
                 </form>
