Nowrap course code on course page as well

--- a/tcf_website/templates/course/course.html
+++ b/tcf_website/templates/course/course.html
@@ -17,7 +17,7 @@
 
         <div class="instructors container-lg mt-3">
             <div class="d-md-flex align-items-baseline my-3">
-                <h1 class="mr-md-3">{{ course.code }}</h1>
+                <h1 class="mr-md-3" style="white-space: nowrap">{{ course.code }}</h1>
                 <h2>{{ course.title }}</h2>
             </div>
 
