semantics and adding chartjs cdn

--- a/tcf_website/templates/course/course_professor.html
+++ b/tcf_website/templates/course/course_professor.html
@@ -21,136 +21,136 @@
     </div>
   </div>
 
-  <div class="grades_ratings_container mb-5 ">
-    <div class="ratings_container">
-      <div class="ratings_row">
-        <div class="rating_card">
-          <span class="rating_card_num rating_num">--</span>
-          <p class="rating_card_desc"><i class="fa fa-star fa-fw"></i>&nbsp;Rating</p>
+  <div class="grades-ratings-container mb-5 ">
+    <div class="ratings-container">
+      <div class="ratings-row">
+        <div class="rating-card">
+          <span class="rating-card-num rating-num">&mdash;</span>
+          <p class="rating-card-desc"><i class="fa fa-star fa-fw"></i>&nbsp;Rating</p>
         </div>
-        <div class="info_container">
-          <div class="info_row">
-            <div class="info_title">
+        <div class="info-container">
+          <div class="info-row">
+            <div class="info-title">
               <i class="fas fa-user"></i>&nbsp;Instructor
             </div>
-            <div class="info_bar">
+            <div class="info-bar">
               <div class="progress p-0 m-0">
                 <div class="progress-bar instructor-bar p-0 m-0" style="width: 0%"></div>
               </div>
             </div>
-            <div class="info_num instructor-num">
-              ---
+            <div class="info-num instructor-num">
+              &mdash;
             </div>
           </div>
-          <div class="info_row">
-            <div class="info_title">
+          <div class="info-row">
+            <div class="info-title">
               <i class="far fa-smile-beam"></i>&nbsp;Enjoyability
             </div>
-            <div class="info_bar">
+            <div class="info-bar">
               <div class="progress p-0 m-0">
                 <div class="progress-bar fun-bar p-0 m-0" style="width:0%"></div>
               </div>
             </div>
-            <div class="info_num fun-num">
-              ---
+            <div class="info-num fun-num">
+              &mdash;
             </div>
           </div>
-          <div class="info_row">
-            <div class="info_title">
+          <div class="info-row">
+            <div class="info-title">
               <i class="fas fa-dumbbell"></i>&nbsp;Difficulty
             </div>
-            <div class="info_bar">
+            <div class="info-bar">
               <div class="progress  p-0 m-0">
                 <div class="progress-bar difficulty-bar p-0 m-0" style="width:0%"></div>
               </div>
             </div>
-            <div class="info_num difficulty-num">
-              ---
+            <div class="info-num difficulty-num">
+              &mdash;
             </div>
           </div>
-          <div class="info_row">
-            <div class="info_title">
+          <div class="info-row">
+            <div class="info-title">
               <i class="fas fa-thumbs-up"></i>&nbsp;Recommend
             </div>
-            <div class="info_bar">
+            <div class="info-bar">
               <div class="progress  p-0 m-0">
                 <div class="progress-bar recommend-bar p-0 m-0" style="width:0%"></div>
               </div>
             </div>
-            <div class="info_num recommend-num">
-              ---
+            <div class="info-num recommend-num">
+              &mdash;
             </div>
           </div>
         </div>
       </div>
-      <div class="ratings_row" style="align-items: flex-end">
-        <div class="rating_card">
-          <span class="rating_card_num hours_num">--</span>
-          <p class="rating_card_desc"><i class="fa fa-hourglass-half fa-fw"></i>&nbsp;Hours/Week</p>
+      <div class="ratings-row" style="align-items: flex-end">
+        <div class="rating-card">
+          <span class="rating-card-num hours-num">&mdash;</span>
+          <p class="rating-card-desc"><i class="fa fa-hourglass-half fa-fw"></i>&nbsp;Hours/Week</p>
         </div>
-        <div class="info_container">
-          <div class="info_row">
-            <div class="info_title">
+        <div class="info-container">
+          <div class="info-row">
+            <div class="info-title">
               <i class="fas fa-book"></i>&nbsp;Reading
             </div>
-            <div class="info_bar">
+            <div class="info-bar">
               <div class="progress  p-0 m-0">
                 <div class="progress-bar reading-bar p-0 m-0" style="width:0%"></div>
               </div>
             </div>
-            <div class="info_num reading-num">
-              ---
+            <div class="info-num reading-num">
+              &mdash;
             </div>
           </div>
-          <div class="info_row">
-            <div class="info_title">
+          <div class="info-row">
+            <div class="info-title">
               <i class="fas fa-pencil-alt"></i>&nbsp;Writing
             </div>
-            <div class="info_bar">
+            <div class="info-bar">
               <div class="progress  p-0 m-0">
                 <div class="progress-bar writing-bar p-0 m-0" style="width:0%"></div>
               </div>
             </div>
-            <div class="info_num writing-num">
-              ---
+            <div class="info-num writing-num">
+              &mdash;
             </div>
           </div>
-          <div class="info_row">
-            <div class="info_title">
+          <div class="info-row">
+            <div class="info-title">
               <i class="fas fa-user-friends"></i>&nbsp;Groupwork
             </div>
-            <div class="info_bar">
+            <div class="info-bar">
               <div class="progress  p-0 m-0">
                 <div class="progress-bar group-bar p-0 m-0" style="width:0%"></div>
               </div>
             </div>
-            <div class="info_num group-num">
-              ---
+            <div class="info-num group-num">
+              &mdash;
             </div>
           </div>
-          <div class="info_row">
-            <div class="info_title">
+          <div class="info-row">
+            <div class="info-title">
               <i class="fas fa-flask"></i>&nbsp;Other
             </div>
-            <div class="info_bar">
+            <div class="info-bar">
               <div class="progress p-0 m-0">
                 <div class="progress-bar homework-bar p-0 m-0" style="width: 0%"></div>
               </div>
             </div>
-            <div class="info_num homework-num">
-              ---
+            <div class="info-num homework-num">
+              &mdash;
             </div>
           </div>
         </div>
       </div>
     </div>
-    <div class="grades_container">
-      <div class="chart_container d-flex align-items-center justify-content-center">
+    <div class="grades-container">
+      <div class="chart-container d-flex align-items-center justify-content-center">
         <canvas width="100%" height="100%" id="myChart"></canvas>
       </div>
-      <div class="Absolute-Center">
-        <p class="gpa-text"> -- GPA</p>
-        <p class="students-text"> -- Students</p>
+      <div class="absolute-center">
+        <p class="gpa-text"> &mdash; GPA</p>
+        <p class="students-text"> &mdash; Students</p>
       </div>
     </div>
 
@@ -179,12 +179,12 @@
 {% block js %}
 <script type="module" src="{% static 'reviews/review.js' %}"></script>
 <script type="module" src="{% static 'course/javascript/Chart.bundle.js' %}"></script>
-<script type="module"
-  src="https://cdn.jsdelivr.net/gh/emn178/chartjs-plugin-labels/src/chartjs-plugin-labels.js"></script>
-<script type="module" src="{% static 'course/javascript/chart.js' %}"></script>
+<script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
+<script type="module" src="https://cdn.jsdelivr.net/gh/emn178/chartjs-plugin-labels/src/chartjs-plugin-labels.js"></script>
+<script type="module" src="{% static 'course/javascript/course_data.js' %}"></script>
 <script type="module">
 
-  import { loadData } from "{% static 'course/javascript/chart.js' %}";
+  import { loadData } from "{% static 'course/javascript/course_data.js' %}";
 
   loadData("http://localhost:8000/api/courses/{{course_id}}/?allstats")
 
