--- a/tcf_website/static/course/course_professor.css
+++ b/tcf_website/static/course/course_professor.css
@@ -1,4 +1,4 @@
-.grades_ratings_container {
+.grades-ratings-container {
     width: 100%;
     height: 300px;
     display: flex;
@@ -6,7 +6,7 @@
     margin-top: 30px
 }
 
-.grades_container {
+.grades-container {
     width: 45%;
     height: 100%;
     flex-shrink: 1;
@@ -17,25 +17,25 @@
     z-index: 0;
 }
  
-.chart_container {
+.chart-container {
     height: 95%;
     width: 290px;
     position: relative;
 }
  
-.ratings_container {
+.ratings-container {
     height: 100%;
     display: flex;
     flex-grow: 1;
     flex-direction: column;
 }
  
-.ratings_row {
+.ratings-row {
     display: flex;
     height: 50%
 }
  
-.rating_card {
+.rating-card {
     height: 97%;
     background-color: white;
     width: 200px;
@@ -47,15 +47,15 @@
     padding-bottom: 40px
 }
  
-.rating_card_num {
+.rating-card-num {
     font-size: 42px;
     color: #D75626
 }
  
-.rating_card_desc {
+.rating-card-desc {
     font-size: 18px;
 }
-.info_container {
+.info-container {
     display: flex;
     flex-direction: column;
     flex-grow: 1;
@@ -70,7 +70,7 @@
     min-width: 250px
 }
  
-.Absolute-Center {
+.absolute-center {
     position: absolute;
     top: auto; left: auto;
     display: flex;
@@ -95,13 +95,13 @@
     background-color: #56679d
 }
  
-.info_row {
+.info-row {
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
  
-.info_title{
+.info-title{
     width: 130px;
     padding-left: 5px;
     display: flex;
@@ -109,23 +109,25 @@
     align-items: center
 }
 
-
-.info_num {
-    padding-left: 20px;
+.info-num {
+    display: flex;
+    justify-content: flex-end;
+    width: 70px;
     padding-right: 10px;
 }
-.info_bar{ 
+
+.info-bar{ 
     flex-grow: 1;
     flex-shrink: 1;
 }
  
 @media (max-width: 1100px) {
-    .grades_ratings_container {
+    .grades-ratings-container {
       flex-direction: column;
       height: 650px;
     }
  
-    .grades_container{
+    .grades-container{
         height: 50%;
         width: 100%;
         margin-top: 20px;
@@ -133,11 +135,11 @@
         padding-bottom: 20px;
     }
  
-    .ratings_container{
+    .ratings-container{
         height: 50%
     }
  
-    .info_container{
+    .info-container{
         margin-right: 0
     }
  
@@ -147,65 +149,69 @@
     .students-text{
         font-size: 14
     }
- 
   }
  
+  @media(max-width: 800px){
+      .info-num{
+          width: 60px
+      }
+  }
+
   @media(max-width: 500px){
-    .grades_ratings_container{
+    .grades-ratings-container{
         height: 500px;
     }
-    .ratings_container{
+    .ratings-container{
         height: 38%;
     }
- 
-    .grades_container{
+    .grades-container{
         height: 62%;
     }
-    .rating_card_num{
+    .rating-card-num{
         font-size: 24px
     }
-    .rating_card_desc{
+    .rating-card-desc{
         font-size: 14px
     }
-    .info_title {
+    .info-title {
         font-size: 14px;
         width: 120px
     }
-    .info_num{
-        font-size: 14px
+    .info-num{
+        font-size: 14px;
+        width: 30
     }
     .progress{
         height: 14px
     }
- 
   }
  
   @media(max-width: 400px){
-    .grades_ratings_container{
+    .grades-ratings-container{
         height: 400px
     }
  
-    .grades_container{
+    .grades-container{
         height: 50%;
     }
  
-    .chart_container{
+    .chart-container{
         width: 175px
     }
-    .ratings_container{
+    .ratings-container{
         height: 50%
     }
-    .rating_card_num{
+    .rating-card-num{
         font-size: 16px
     }
-    .rating_card_desc{
+    .rating-card-desc{
         font-size: 10px
     }
-    .info_title {
+    .info-title {
         font-size: 10px;
         width: 90
     }
-    .info_num{
+    .info-num{
         font-size: 10px
     }
     .progress{
@@ -218,38 +224,38 @@
     .students-text{
         font-size: 12px
     }
-    .info_container {
+    .info-container {
         width: 250px;
         flex-shrink: 1
     }
-    .rating_card{
+    .rating-card{
         width: 70px
     }
-    .grades_container{
+    .grades-container{
         margin-bottom: 0
     }
-    .grades_ratings_container{
+    .grades-ratings-container{
         margin-bottom: 100px
     }
  
   }
  
   @media(max-width: 380px){
-    .rating_card{
+    .rating-card{
         min-width: 80px;
         flex-grow: 1;
         flex-shrink: 1 
     } 
-    .info_bar{
+    .info-bar{
         width: 50%;
         flex-shrink:2;
         margin-right: 0;
         padding-right: 0
     }
-    .info_container{
+    .info-container{
         min-width: 0;
     }
-    .info_num{
+    .info-num{
         margin-left: 2
     }
  
