Debug commit I can revert back to if needed

--- a/tcf_website/templates/course/course_professor.html
+++ b/tcf_website/templates/course/course_professor.html
@@ -186,7 +186,7 @@
 
   import { loadData } from "{% static 'course/javascript/course_data.js' %}";
 
-  loadData("http://localhost:8000/api/courses/{{course_id}}/?allstats")
+  loadData("http://127.0.0.1:8000/api/courses/{{course_id}}/?allstats")
 
 </script>
 {% endblock %}
