--- a/tcf_website/templates/profile/profile.html
+++ b/tcf_website/templates/profile/profile.html
@@ -28,6 +28,8 @@
                             {{ form.graduation_year.label_tag }}
                             {{ form.graduation_year }}
                         </div>
+                    </div>
+                    <div class="form-row">
                         <div class="col-12 col-lg-4 ">
                             {{ form.first_major.label_tag }}
                             {{ form.first_major }}
