--- a/tcf_website/templates/about/history.html
+++ b/tcf_website/templates/about/history.html
@@ -41,7 +41,7 @@
       <p>
         In Spring 2020, theCourseForum needed a fresh start. Under the
         leadership of Brian Yu, Sai Konuri, Brad Knaysi, and Jennifer Long, theCourseForum
-        was re-build from scratch using the Python web-framework Django.
+        was re-built from scratch using the Python web-framework Django.
       </p>
     </div>
   </div>
