--- a/tcf_website/templates/course/course_professor.html
+++ b/tcf_website/templates/course/course_professor.html
@@ -2,193 +2,196 @@
 {% load static %}
 
 {% block styles %}
-<link rel="stylesheet" href="{% static 'common/toolbar.css' %}" />
-<link rel="stylesheet" href="{% static 'course/course_professor.css' %}" />
-<link rel="stylesheet" href="{% static 'reviews/review.css' %}" />
+    <link rel="stylesheet" href="{% static 'common/toolbar.css' %}"/>
+    <link rel="stylesheet" href="{% static 'course/course_professor.css' %}"/>
+    <link rel="stylesheet" href="{% static 'reviews/review.css' %}"/>
 {% endblock %}
 
 {% block content %}
 
-<div class="course-professor container">
+    <div class="course-professor container">
 
-  {% include "common/toolbar.html" with breadcrumbs=breadcrumbs %}
+        {% include "common/toolbar.html" with breadcrumbs=breadcrumbs %}
 
-  <div class="d-flex flex-column align-items-center my-3 mt-md-5">
-    <h1>{{ instructor.full_name }}</h1>
-    <div class="d-md-flex">
-      <h4 class="mr-md-3">{{ course.code }}</h4>
-      <h4 class="mr-md-3">{{ course.title }}</h4>
-    </div>
-  </div>
-
-  <div class="grades-ratings-container mb-5 ">
-    <div class="ratings-container">
-      <div class="ratings-row">
-        <div class="rating-card">
-          <span class="rating-card-num rating-num">&mdash;</span>
-          <p class="rating-card-desc"><i class="fa fa-star fa-fw"></i>&nbsp;Rating</p>
+        <div class="d-flex flex-column align-items-center my-3 mt-md-5">
+            <h1>{{ instructor.full_name }}</h1>
+            <div class="d-md-flex">
+                <h4 class="mr-md-3">{{ course.code }}</h4>
+                <h4 class="mr-md-3">{{ course.title }}</h4>
+            </div>
         </div>
-        <div class="info-container">
-          <div class="info-row">
-            <div class="info-title">
-              <i class="fas fa-user"></i>&nbsp;Instructor
+
+        <div class="grades-ratings-container mb-5 ">
+            <div class="ratings-container">
+                <div class="ratings-row">
+                    <div class="rating-card">
+                        <span class="rating-card-num rating-num">&mdash;</span>
+                        <p class="rating-card-desc"><i class="fa fa-star fa-fw"></i>&nbsp;Rating</p>
+                    </div>
+                    <div class="info-container">
+                        <div class="info-row">
+                            <div class="info-title">
+                                <i class="fas fa-user"></i>&nbsp;Instructor
+                            </div>
+                            <div class="info-bar">
+                                <div class="progress p-0 m-0">
+                                    <div class="progress-bar instructor-bar p-0 m-0" style="width: 0%"></div>
+                                </div>
+                            </div>
+                            <div class="info-num instructor-num">
+                                &mdash;
+                            </div>
+                        </div>
+                        <div class="info-row">
+                            <div class="info-title">
+                                <i class="far fa-smile-beam"></i>&nbsp;Enjoyability
+                            </div>
+                            <div class="info-bar">
+                                <div class="progress p-0 m-0">
+                                    <div class="progress-bar fun-bar p-0 m-0" style="width:0%"></div>
+                                </div>
+                            </div>
+                            <div class="info-num fun-num">
+                                &mdash;
+                            </div>
+                        </div>
+                        <div class="info-row">
+                            <div class="info-title">
+                                <i class="fas fa-dumbbell"></i>&nbsp;Difficulty
+                            </div>
+                            <div class="info-bar">
+                                <div class="progress  p-0 m-0">
+                                    <div class="progress-bar difficulty-bar p-0 m-0" style="width:0%"></div>
+                                </div>
+                            </div>
+                            <div class="info-num difficulty-num">
+                                &mdash;
+                            </div>
+                        </div>
+                        <div class="info-row">
+                            <div class="info-title">
+                                <i class="fas fa-thumbs-up"></i>&nbsp;Recommend
+                            </div>
+                            <div class="info-bar">
+                                <div class="progress  p-0 m-0">
+                                    <div class="progress-bar recommend-bar p-0 m-0" style="width:0%"></div>
+                                </div>
+                            </div>
+                            <div class="info-num recommend-num">
+                                &mdash;
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="ratings-row" style="align-items: flex-end">
+                    <div class="rating-card">
+                        <span class="rating-card-num hours-num">&mdash;</span>
+                        <p class="rating-card-desc"><i class="fa fa-hourglass-half fa-fw"></i>&nbsp;Hours/Week</p>
+                    </div>
+                    <div class="info-container">
+                        <div class="info-row">
+                            <div class="info-title">
+                                <i class="fas fa-book"></i>&nbsp;Reading
+                            </div>
+                            <div class="info-bar">
+                                <div class="progress  p-0 m-0">
+                                    <div class="progress-bar reading-bar p-0 m-0" style="width:0%"></div>
+                                </div>
+                            </div>
+                            <div class="info-num reading-num">
+                                &mdash;
+                            </div>
+                        </div>
+                        <div class="info-row">
+                            <div class="info-title">
+                                <i class="fas fa-pencil-alt"></i>&nbsp;Writing
+                            </div>
+                            <div class="info-bar">
+                                <div class="progress  p-0 m-0">
+                                    <div class="progress-bar writing-bar p-0 m-0" style="width:0%"></div>
+                                </div>
+                            </div>
+                            <div class="info-num writing-num">
+                                &mdash;
+                            </div>
+                        </div>
+                        <div class="info-row">
+                            <div class="info-title">
+                                <i class="fas fa-user-friends"></i>&nbsp;Groupwork
+                            </div>
+                            <div class="info-bar">
+                                <div class="progress  p-0 m-0">
+                                    <div class="progress-bar group-bar p-0 m-0" style="width:0%"></div>
+                                </div>
+                            </div>
+                            <div class="info-num group-num">
+                                &mdash;
+                            </div>
+                        </div>
+                        <div class="info-row">
+                            <div class="info-title">
+                                <i class="fas fa-flask"></i>&nbsp;Other
+                            </div>
+                            <div class="info-bar">
+                                <div class="progress p-0 m-0">
+                                    <div class="progress-bar homework-bar p-0 m-0" style="width: 0%"></div>
+                                </div>
+                            </div>
+                            <div class="info-num homework-num">
+                                &mdash;
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="info-bar">
-              <div class="progress p-0 m-0">
-                <div class="progress-bar instructor-bar p-0 m-0" style="width: 0%"></div>
-              </div>
+            <div class="grades-container">
+                <div class="chart-container d-flex align-items-center justify-content-center">
+                    <canvas width="100%" height="100%" id="myChart"></canvas>
+                </div>
+                <div class="absolute-center">
+                    <p class="gpa-text"> &mdash; GPA</p>
+                    <p class="students-text"> &mdash; Students</p>
+                </div>
             </div>
-            <div class="info-num instructor-num">
-              &mdash;
-            </div>
-          </div>
-          <div class="info-row">
-            <div class="info-title">
-              <i class="far fa-smile-beam"></i>&nbsp;Enjoyability
-            </div>
-            <div class="info-bar">
-              <div class="progress p-0 m-0">
-                <div class="progress-bar fun-bar p-0 m-0" style="width:0%"></div>
-              </div>
-            </div>
-            <div class="info-num fun-num">
-              &mdash;
-            </div>
-          </div>
-          <div class="info-row">
-            <div class="info-title">
-              <i class="fas fa-dumbbell"></i>&nbsp;Difficulty
-            </div>
-            <div class="info-bar">
-              <div class="progress  p-0 m-0">
-                <div class="progress-bar difficulty-bar p-0 m-0" style="width:0%"></div>
-              </div>
-            </div>
-            <div class="info-num difficulty-num">
-              &mdash;
-            </div>
-          </div>
-          <div class="info-row">
-            <div class="info-title">
-              <i class="fas fa-thumbs-up"></i>&nbsp;Recommend
-            </div>
-            <div class="info-bar">
-              <div class="progress  p-0 m-0">
-                <div class="progress-bar recommend-bar p-0 m-0" style="width:0%"></div>
-              </div>
-            </div>
-            <div class="info-num recommend-num">
-              &mdash;
-            </div>
-          </div>
+
         </div>
-      </div>
-      <div class="ratings-row" style="align-items: flex-end">
-        <div class="rating-card">
-          <span class="rating-card-num hours-num">&mdash;</span>
-          <p class="rating-card-desc"><i class="fa fa-hourglass-half fa-fw"></i>&nbsp;Hours/Week</p>
+
+
+        <div class="dropdown">
+            <button id="review-sort-select" class="btn btn-secondary dropdown-toggle" type="button" id="sortOptions"
+                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
+            <div class="dropdown-menu" aria-labelledby="sortOptions">
+                <button id="votes-sort-btn" onclick="sortReviews(this.id)" class="dropdown-item" type="button">Most
+                    Helpful
+                </button>
+                <button id="recent-sort-btn" onclick="sortReviews(this.id)" class="dropdown-item" type="button">Most
+                    Recent
+                </button>
+                <button id="highrating-sort-btn" onclick="sortReviews(this.id)" class="dropdown-item" type="button">
+                    Highest
+                    Rating
+                </button>
+                <button id="lowrating-sort-btn" onclick="sortReviews(this.id)" class="dropdown-item" type="button">
+                    Lowest
+                    Rating
+                </button>
+            </div>
         </div>
-        <div class="info-container">
-          <div class="info-row">
-            <div class="info-title">
-              <i class="fas fa-book"></i>&nbsp;Reading
-            </div>
-            <div class="info-bar">
-              <div class="progress  p-0 m-0">
-                <div class="progress-bar reading-bar p-0 m-0" style="width:0%"></div>
-              </div>
-            </div>
-            <div class="info-num reading-num">
-              &mdash;
-            </div>
-          </div>
-          <div class="info-row">
-            <div class="info-title">
-              <i class="fas fa-pencil-alt"></i>&nbsp;Writing
-            </div>
-            <div class="info-bar">
-              <div class="progress  p-0 m-0">
-                <div class="progress-bar writing-bar p-0 m-0" style="width:0%"></div>
-              </div>
-            </div>
-            <div class="info-num writing-num">
-              &mdash;
-            </div>
-          </div>
-          <div class="info-row">
-            <div class="info-title">
-              <i class="fas fa-user-friends"></i>&nbsp;Groupwork
-            </div>
-            <div class="info-bar">
-              <div class="progress  p-0 m-0">
-                <div class="progress-bar group-bar p-0 m-0" style="width:0%"></div>
-              </div>
-            </div>
-            <div class="info-num group-num">
-              &mdash;
-            </div>
-          </div>
-          <div class="info-row">
-            <div class="info-title">
-              <i class="fas fa-flask"></i>&nbsp;Other
-            </div>
-            <div class="info-bar">
-              <div class="progress p-0 m-0">
-                <div class="progress-bar homework-bar p-0 m-0" style="width: 0%"></div>
-              </div>
-            </div>
-            <div class="info-num homework-num">
-              &mdash;
-            </div>
-          </div>
-        </div>
-      </div>
+
+        {% include "reviews/reviews.html" with reviews=reviews %}
     </div>
-    <div class="grades-container">
-      <div class="chart-container d-flex align-items-center justify-content-center">
-        <canvas width="100%" height="100%" id="myChart"></canvas>
-      </div>
-      <div class="absolute-center">
-        <p class="gpa-text"> &mdash; GPA</p>
-        <p class="students-text"> &mdash; Students</p>
-      </div>
-    </div>
-
-  </div>
-
-
-  <div class="dropdown">
-    <button id="review-sort-select" class="btn btn-secondary dropdown-toggle" type="button" id="sortOptions"
-      data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
-    <div class="dropdown-menu" aria-labelledby="sortOptions">
-      <button id="votes-sort-btn" onclick="sortReviews(this.id)" class="dropdown-item" type="button">Most
-        Helpful</button>
-      <button id="recent-sort-btn" onclick="sortReviews(this.id)" class="dropdown-item" type="button">Most
-        Recent</button>
-      <button id="highrating-sort-btn" onclick="sortReviews(this.id)" class="dropdown-item" type="button">Highest
-        Rating</button>
-      <button id="lowrating-sort-btn" onclick="sortReviews(this.id)" class="dropdown-item" type="button">Lowest
-        Rating</button>
-    </div>
-  </div>
-
-  {% include "reviews/reviews.html" with reviews=reviews %}
-</div>
 {% endblock %}
 
 {% block js %}
-<script type="module" src="{% static 'reviews/review.js' %}"></script>
-<script type="module" src="{% static 'course/javascript/Chart.bundle.js' %}"></script>
-<script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
-<script type="module" src="https://cdn.jsdelivr.net/gh/emn178/chartjs-plugin-labels/src/chartjs-plugin-labels.js"></script>
-<script type="module" src="{% static 'course/javascript/course_data.js' %}"></script>
-<script type="module">
+    <script type="module" src="{% static 'reviews/review.js' %}"></script>
+    <script type="module" src="{% static 'course/javascript/Chart.bundle.js' %}"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
+    <script type="module"
+            src="https://cdn.jsdelivr.net/gh/emn178/chartjs-plugin-labels/src/chartjs-plugin-labels.js"></script>
+    <script type="module" src="{% static 'course/javascript/course_data.js' %}"></script>
+    <script type="module">
+        import {loadData} from "{% static 'course/javascript/course_data.js' %}";
 
-  import { loadData } from "{% static 'course/javascript/course_data.js' %}";
-
-
-  loadData(JSON.parse("{{ data|escapejs }}"))
-
-
-</script>
+        loadData(JSON.parse("{{ data|escapejs }}"))
+    </script>
 {% endblock %}
